--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-        <link rel="icon" href="/assets/images/favicon.ico">
+        <link rel="icon" href="https://friendzone91.herokuapp.com/assets/images/favicon.ico">
     </head>
     <body>
         <br>
