fixed center spelling

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -114,7 +114,7 @@
         </style>
 
         <script type="text/javascript">
-            var questions = ["Do you value justice higher than mercy?", "Do you rapidly get involved in the social life of a new workplace?", "Do you think that the more people with whom you can speak, the better?", "Do you tend to rely on your experience rather than on theoretical alternatives?", "As a rule, do you proceed only when you have a clear and detailed plan?", "Do you easily empathize with the concerns of other people?", "Do you often prefer to read a book than go to a party?", "When with a group of people, do you enjoy being directly involved and being at the centre of attention?", "Are you are more inclined to experiment than to follow familiar approaches?", "Are you strongly touched by the stories about people's troubles?"];
+            var questions = ["Do you value justice higher than mercy?", "Do you rapidly get involved in the social life of a new workplace?", "Do you think that the more people with whom you can speak, the better?", "Do you tend to rely on your experience rather than on theoretical alternatives?", "As a rule, do you proceed only when you have a clear and detailed plan?", "Do you easily empathize with the concerns of other people?", "Do you often prefer to read a book than go to a party?", "When with a group of people, do you enjoy being directly involved and being at the center of attention?", "Are you are more inclined to experiment than to follow familiar approaches?", "Are you strongly touched by the stories about people's troubles?"];
             var questionIds = ["q1", "q2", "q3", "q4", "q5", "q6", "q7", "q8", "q9", "q10"];
             for (var i = 0; i < questions.length; i++) {
                 var formGroup = $("<div>");
